<resources>
    <string name="app_name">久伴</string>

    <string name="story_01">\u3000\u3000夏至和秋分如同他们的名字一样，一个在南，一个在北。</string>
    <string name="story_02">\u3000\u3000一次偶然，夏至获得了一颗神奇种子，这颗种子必须由两个人合种，否则它就不会生长，进入无休无止的睡眠。</string>
    <string name="story_03">\u3000\u3000这颗种子也必须由两个人共同养护，它才会茁壮生长。</string>
    <string name="story_04">\u3000\u3000成长过程中，它会记录两个人的美好时光、它会包容彼此的怨念、它会一直陪伴着它的两个主人，</string>
    <string name="story_05">\u3000\u3000除非...算了，我们不谈除非，把那令人不开心的结局，让时间去吞没吧。</string>
</resources>
